# brightside

./: .ChangeLog.swp  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  brightside.spec  brightside.spec.in  config.h  config.h.in  config.status  configure  configure.ac  intltool-extract  intltool-merge  intltool-update
debian/: brightside.substvars  changelog  control  files
debian/brightside/DEBIAN/: control  md5sums
debian/brightside/usr/share/brightside/: brightside-properties.glade
debian/brightside/usr/share/locale/am/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/ar/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/az/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/cs/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/da/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/de/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/es/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/fa/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/fi/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/he/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/id/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/is/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/it/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/mk/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/mn/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/ms/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/ro/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/ru/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/sk/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/sl/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/sq/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/sr@Latn/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/sv/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/uk/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/zh_CN/LC_MESSAGES/: Brightside.mo
debian/brightside/usr/share/locale/zh_TW/LC_MESSAGES/: Brightside.mo
doc/html/: Screenshot-Fade-in-animated.sh  index.html
doc/html/0x6.973746867697262p+9570/: index.html
po/: .intltool-merge-cache  ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  am.po  ar.po  az.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  brightside.pot  ca.gmo  ca.po  cs.po  cy.gmo  cy.po  da.po  de.po  el.gmo  el.po  es.po  et.gmo  et.po  eu.gmo  eu.po  fa.po  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  he.po  hi.gmo  hi.po  (+46 more)
src/: .brightside-properties.c.swp  .brightside.c.swp  .brightside.schemas.in.swp  .gconf-property-editor.c.swp  Makefile  Makefile.am  Makefile.in  brightside  brightside-fb-level.c  brightside-fb-level.h  brightside-properties  brightside-properties-shared.h  brightside-properties.c  brightside-properties.h  brightside-tray.c  brightside-tray.d  brightside-tray.h  brightside-util.c  brightside-util.h  brightside-volume-alsa.c  brightside-volume-alsa.h  brightside-volume-dummy.c  brightside-volume-dummy.h  brightside-volume-oss.c  brightside-volume-oss.h  brightside-volume.c  brightside-volume.h  brightside.c  brightside.desktop  brightside.desktop.in  brightside.glade  brightside.h  brightside.schemas  brightside.schemas.in  custom-action.c  custom-action.glade  custom-action.h  gconf-property-editor.c
src/.deps/: brightside-fb-level.Po  brightside-properties.Po  brightside-util.Po  brightside-volume-alsa.Po  brightside-volume-dummy.Po  brightside-volume-oss.Po  brightside-volume.Po  brightside.Po  custom-action.Po  gconf-property-editor-marshal.Po  gconf-property-editor.Po  preview-file-selection.Po
